--- a/public/style.css
+++ b/public/style.css
@@ -64,12 +64,34 @@ h3 {
     margin-bottom: 8px;
 }
 
-p {
-    margin-bottom: 20px;
-}
-
 .content {
     margin-left: 20px;
+}
+
+.blogs a{
+    display: block;
+    margin: 40px 0;
+    padding-left: 30px;
+    border-left: 6px solid crimson;
+}
+.blogs a:hover h3{
+    color: crimson;
+}
+
+.details{
+    position: relative;
+}
+.delete{
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    padding: 8px;
+    transition: box-shadow 250ms;
+}
+.delete:hover{
+    cursor: pointer;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
 .content-blog {
