--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,7 +6,7 @@
 <body>
     <%- include('./partials/nav.ejs') %>
     <div class="create-blog content">
-        <form>
+        <form action="/blogs" method="post">
             <label for="title">Blog Title</label>
             <input type="text" id="title" name="title" required>
 
